# streaming_calc_actixweb

./: Cargo.toml  README.md  build.sh  scaw.nomad
.github/workflows/: ci.yml  coverage.yml  release.yml  security_push.yml  security_scheduled.yml
src/: bwserver.rs  configuration.rs  index.rs  main.rs  redoc.rs  serverusagebw.rs  tests.rs  trait_imp.rs  util.rs
static/: redoc.html
