[package]
name = "streaming_calc_actixweb"
version = "0.2.0"
authors = ["sycured <60801403+sycured@users.noreply.github.com>"]
edition = "2021"
repository = "https://github.com/sycured/streaming_calc_actixweb"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.1"
actix-web = "4.1.0"
env_logger = "0.9.0"
log = "0.4.17"
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"

[profile.release]
lto = true
strip = true

[profile.dev]
opt-level = 3
lto = true
