[package]
name = "streaming_calc_actixweb"
version = "0.2.1"
authors = ["sycured <60801403+sycured@users.noreply.github.com>"]
edition = "2021"
repository = "https://github.com/sycured/streaming_calc_actixweb"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-multiresponse = { git = "https://github.com/sycured/actix-multiresponse", branch = "main", features = ["json", "xml", "protobuf"] }
actix-request-identifier = "4.1.0"
actix-web = "4.3.1"
env_logger = "0.10.0"
log = "0.4.19"
prost = "0.11.9"
prost-derive = "0.11.9"
serde = { version = "1.0.176", features = ["derive"] }
serde_json = "1.0.104"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.5.4"

[profile.release]
codegen-units = 1
lto = true
strip = true

[profile.dev]
opt-level = 3
lto = true
